Fixed inconsistent footer spacing

--- a/css/stripe.css
+++ b/css/stripe.css
@@ -324,7 +324,7 @@ html,body {
   .site-footer
 {
   background-color:#0A2540; 
-  padding:45px 0 20px;
+  padding:0px 0 20px;
   font-size:15px;
   line-height:24px;
   color: #d3d3d3;
@@ -396,13 +396,12 @@ html,body {
 {
   margin:0
 }
-@media (max-width:991px)
-{
+
   .site-footer [class^=col-]
   {
-    margin-bottom:30px
+    margin-top:30px;
   }
-}
+
 @media (max-width:767px)
 {
   .site-footer
@@ -424,5 +423,8 @@ html,body {
 }
 #footer-logo{
   margin-bottom: 1rem;
+}
+#read-it-again{
+  margin-bottom: 0px;
 }
   
